--- a/week-01/package.json
+++ b/week-01/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csci32-meier",
+  "name": "csci32-meier-week-01",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,5 +22,9 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.6"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
