--- a/packages/sso/package.json
+++ b/packages/sso/package.json
@@ -1,22 +1,27 @@
 {
   "name": "@repo/sso",
-  "type": "module",
-  "scripts": {
-    "dev": "tsc --watch",
-    "build": "tsc"
-  },
+  "version": "0.0.0",
+  "private": true,
   "exports": {
-    "./login": {
-      "types": "./src/login.ts",
-      "default": "./dist/login.js"
-    },
-    "./logout": {
-      "types": "./src/logout.ts",
-      "default": "./dist/logout.js"
-    }
+    "./GoogleSignInButton": "./src/GoogleSignInButton.tsx"
+  },
+  "scripts": {
+    "lint": "eslint . --max-warnings 0",
+    "generate:component": "turbo gen react-component"
   },
   "devDependencies": {
+    "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "typescript": "latest"
+    "@turbo/gen": "^1.12.4",
+    "@types/eslint": "^8.56.5",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "eslint": "^8.57.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "next-auth": "^4.24.7",
+    "react": "^18.2.0"
   }
 }
