[NEW COMPONENT] Adds Google sign in component.

--- a/apps/csci32-nextjs-meier/tsconfig.json
+++ b/apps/csci32-nextjs-meier/tsconfig.json
@@ -18,7 +18,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@repo/*": ["../../packages/*"],
+      "@sso/*": ["../../packages/sso/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
