Includes math package and imports it as a dependency. Minor fixes

--- a/apps/csci32-nextjs-meier/package.json
+++ b/apps/csci32-nextjs-meier/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@repo/math": "*",
     "@repo/sso": "*",
     "@repo/ui": "*",
     "@vercel/analytics": "^1.3.1",
