--- a/apps/csci32-nextjs-meier/tsconfig.json
+++ b/apps/csci32-nextjs-meier/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@repo/*": ["../../packages/*"],
-      "@sso/*": ["../../packages/sso/src/*"]
+      "@sso/*": ["../../packages/sso/src/*"],
+      "@math/*": ["../../packages/math/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
