--- a/apps/csci32-nextjs-meier/package.json
+++ b/apps/csci32-nextjs-meier/package.json
@@ -14,7 +14,7 @@
     "@repo/ui": "*",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "next": "14.2.6",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
