Removes tracking for lock file

--- a/.gitignore
+++ b/.gitignore
@@ -9929,3 +9929,4 @@ node_modules/@vercel/style-guide/node_modules/@typescript-eslint/typescript-estr
 node_modules/@vercel/style-guide/node_modules/@typescript-eslint/typescript-estree/dist/create-program/WatchCompilerHostOfConfigFile.d.ts.map
 node_modules/@vercel/style-guide/node_modules/@typescript-eslint/typescript-estree/dist/create-program/WatchCompilerHostOfConfigFile.js
 node_modules/@vercel/style-guide/node_modules/@typescript-eslint/typescript-estree/dist/create-program/WatchCompilerHostOfConfigFile.js.map
+package-lock.json
