--- a/apps/csci32-nextjs-meier/package.json
+++ b/apps/csci32-nextjs-meier/package.json
@@ -12,6 +12,7 @@
     "@repo/math": "*",
     "@repo/sso": "*",
     "@repo/ui": "*",
+    "@repo/recipestacker-db": "*",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.13",
