Refactors @repo to @package

--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/math",
+  "name": "@package/math",
   "version": "1.0.0",
   "private": true,
   "main": "dist/index.js",
@@ -15,8 +15,8 @@
     "generate:component": "turbo gen react-component"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@package/eslint-config": "*",
+    "@package/typescript-config": "*",
     "@turbo/gen": "^1.12.4",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
