--- a/apps/csci32-nextjs-meier/package.json
+++ b/apps/csci32-nextjs-meier/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/math": "*",
-    "@repo/sso": "*",
-    "@repo/ui": "*",
-    "@repo/recipestacker-db": "*",
+    "@package/math": "*",
+    "@package/sso": "*",
+    "@package/ui": "*",
+    "@package/recipestacker-db": "*",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.13",
@@ -20,8 +20,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@package/eslint-config": "*",
+    "@package/typescript-config": "*",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
