--- a/apps/csci32-nextjs-meier/tsconfig.json
+++ b/apps/csci32-nextjs-meier/tsconfig.json
@@ -19,7 +19,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@repo/*": ["../../packages/*"],
+      "@package/*": ["../../packages/*"],
       "@sso/*": ["../../packages/sso/src/*"],
       "@math/*": ["../../packages/math/src/*"]
     }
