--- a/packages/recipestacker-db/package.json
+++ b/packages/recipestacker-db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/database",
+  "name": "@package/database",
   "version": "1.0.0",
   "exports": {
     ".": "./src/client.ts"
@@ -21,8 +21,8 @@
     "@prisma/client": "^5.10.2"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@package/eslint-config": "*",
+    "@package/typescript-config": "*",
     "eslint": "^8.57.0",
     "prisma": "^5.10.2",
     "rimraf": "^5.0.5",
