--- a/packages/recipestacker-db/package.json
+++ b/packages/recipestacker-db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@package/database",
+  "name": "@package/recipestacker-db",
   "version": "1.0.0",
   "exports": {
     ".": "./src/client.ts"
