--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "@prisma/client": "5.10.2"
+    "@prisma/client": "5.10.2",
+    "fastify": "^5.0.0"
   }
 }
