--- a/apps/recipestacker-api/package.json
+++ b/apps/recipestacker-api/package.json
@@ -12,18 +12,27 @@
     "start": "node dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
-    "dev": "export NODE_ENV='development' && tsx watch src/app.ts"
+    "dev": "export NODE_ENV='development' && tsx watch src/app.ts",
+    "dev-windows": "cross-env NODE_ENV=development && tsx watch src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
+    "@fastify/cors": "^10.0.1",
     "@fastify/sensible": "^5.0.0",
+    "@fastify/swagger": "^9.1.0",
+    "@fastify/swagger-ui": "^5.0.1",
+    "@fastify/type-provider-typebox": "^5.0.0",
     "@package/recipestacker-database": "*",
+    "@sinclair/typebox": "^0.33.15",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "fastify": "^4.26.1",
     "fastify-cli": "^6.3.0",
-    "fastify-plugin": "^4.0.0"
+    "fastify-plugin": "^4.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/node": "^20.4.4",
