--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "generate": "turbo run generate"
   },
   "devDependencies": {
+    "pino-pretty": "^11.2.2",
     "prettier": "^3.2.5",
     "prisma": "5.20.0",
     "tsx": "^4.7.1",
