--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   ],
   "dependencies": {
     "@prisma/client": "5.10.2",
-    "fastify": "^5.0.0"
+    "classnames": "^2.5.1",
+    "fastify": "^5.0.0",
+    "lodash": "^4.17.21"
   }
 }
