--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,10 @@
       "cache": false,
       "persistent": true
     },
+    "dev-windows": {
+      "cache": false,
+      "persistent": true
+    },
     "generate": {
       "dependsOn": ["^generate"]
     }
