--- a/apps/csci32-nextjs-meier/package.json
+++ b/apps/csci32-nextjs-meier/package.json
@@ -13,7 +13,7 @@
     "@package/math": "*",
     "@package/recipestacker-database": "*",
     "@package/sso": "*",
-    "@package/ui": "*",
+    "@package/ui": "^0.0.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.13",
