--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@package/ui": "^0.0.0",
     "@prisma/client": "5.10.2",
     "classnames": "^2.5.1",
     "fastify": "^5.0.0",
