--- a/packages/recipestacker-database/package.json
+++ b/packages/recipestacker-database/package.json
@@ -10,6 +10,7 @@
     "db:push": "prisma db push",
     "db:seed": "tsx src/seed.ts",
     "dev": "tsup src/* --watch",
+    "dev-windows": "tsup src/* --watch",
     "format": "prisma format",
     "generate": "prisma generate",
     "lint": "eslint . --max-warnings 0",
