--- a/packages/recipestacker-database/docker-compose.yml
+++ b/packages/recipestacker-database/docker-compose.yml
@@ -8,12 +8,12 @@ services:
   mysql:
     platform: linux/amd64
     image: mysql:8.0.32
-    container_name: turborepo_mysql
+    container_name: recipestacker_mysql
     restart: always
     ports:
       - 3308:3306
     environment:
-      MYSQL_DATABASE: turborepo
+      MYSQL_DATABASE: recipestacker
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
     volumes:
       - database:/var/lib/mysql
