--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prisma/client": "5.10.2",
     "classnames": "^2.5.1",
     "fastify": "^5.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "swr": "^2.2.5"
   }
 }
